# callish

./: .gitignore  CLAUDE.md  LICENSE  README.md  callish-spec.md  pyproject.toml
.github/workflows/: ci.yml
src/callish/: __init__.py  _meta.py  adapter.py  apps.py  exceptions.py  fields.py  forms.py  manager.py  models.py  queryset.py
src/callish/testing/: __init__.py  helpers.py  plugin.py  reference_adapter.py  suite.py
tests/: conftest.py  models.py  settings.py  test_admin.py  test_conformance_against_inmemory.py  test_fields.py  test_generic_views.py  test_m1_filter.py  test_m1_list.py  test_m1_retrieve.py  test_m2_create.py  test_m2_delete.py  test_m2_update.py  test_m3_errors.py  test_meta_shim.py  test_modelform.py  test_queryset.py  test_views_function_based.py  urls.py  views.py
tests/compat/: test_wagtail_smoke.py
tests/templates/: invoice_confirm_delete.html  invoice_detail.html  invoice_form.html  invoice_list.html
